Update methodology with morphological matrix, pugh and changes in FMS, software and general architecture

--- a/references.bib
+++ b/references.bib
@@ -458,6 +458,84 @@
     note={\url{https://hbr.org/1988/05/the-house-of-quality}}
 }
 
+@misc{cite_morphological_matrix, 
+    title={How to Use a Morphological Matrix to Generate Ideas},
+    author={Derek Cheshire},
+    year="{2010}",
+    note={\url{https://innovationmanagement.se/2010/03/10/how-to-use-a-morphological-matrix-to-generate-ideas/#:~:text=A\%20morphological\%20matrix\%20is\%20a,been\%20around\%20for\%20a\%20while.}}
+}
+
+@misc{cite_tkinter_official, 
+    title={tkinter — Python interface to Tcl/Tk},
+    author="{Python Software Foundation [US]}",
+    year="{2021}",
+    note={\url{https://docs.python.org/3/library/tkinter.html}}
+}
+
+@misc{cite_bash_terminal, 
+    title={What is Bash?},
+    author="{GNU Operating System}",
+    year={n.d.},
+    note={\url{https://www.gnu.org/software/bash/manual/html_node/What-is-Bash_003f.html}}
+}
+
+@misc{cite_electron_js, 
+    title={Build cross-platform desktop apps with JavaScript, HTML, and CSS},
+    author="{OpenJS Foundation}",
+    year={2021},
+    note={\url{https://www.electronjs.org}}
+}
+
+@misc{cite_PID_control, 
+    title={Limitations and Countermeasures of PID Controllers},
+    author="{ACS Publications}",
+    year={1996},
+    note={\url{https://pubs.acs.org/doi/abs/10.1021/ie960090+}}
+}
+
+@article{cite_IMC_control,
+    author = {William A. Poe and Saeid Mokhatab},
+    year = {2017},
+    title = {Internal Model Control},
+    note = {\url{https://www.sciencedirect.com/topics/engineering/internal-model-control}},
+    doi={https://doi.org/10.1016/C2014-0-03765-3}
+}
+
+@misc{cite_abb_robots, 
+    title={ABB Robots},
+    author="{Robots Done Right}",
+    year={2021},
+    note={\url{https://robotsdoneright.com/ABB-Robots.html}}
+}
+
+@misc{cite_stereo_camera_zed, 
+    title={ZED 2 STEREO CAMERA},
+    author="{ZED Cameras}",
+    year={n.d.},
+    note={\url{https://chironix.com/products/zed-stereo-camera}}
+}
+
+@misc{cite_rgbd_camera, 
+    title={Enhanced RGB-D Mapping Method for Detailed 3D Indoor and Outdoor Modeling},
+    author={Shengjun Tang and Qing Zhu and Wu Chen and Walid Darwish and Bo Wu and Han Hu and and Min Chen and Jonathan Li},
+    year={2016},
+    note={\url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5087378/}}
+}
+
+@misc{cite_baxter_hand_camera, 
+    title={Baxter},
+    author="{IEEE Robots}",
+    year={2012},
+    note={\url{https://robots.ieee.org/robots/baxter/?gallery=photo3}}
+}
+
+@misc{cite_pugh_matrix, 
+    title={Pugh Matrix Analysis (PM)},
+    author={Stuart Burge},
+    year={2009},
+    note={\url{https://www.burgehugheswalsh.co.uk/uploaded/1/documents/pugh-matrix-v1.1.pdf}}
+}
+
 
 
 
