Fix general objective verb and add extra anomaly handling chapter to do

--- a/tesis_article.tex
+++ b/tesis_article.tex
@@ -337,7 +337,7 @@ In addition to the previous reasons, one of the most important motives for carry
 
 In this chapter, we will dive into the objectives of the research that are expected by the end of the project.\\
 
-It is of high importance to have a general and specific planning of the objectives to be developed in the evolution of the project. The following are the proposed objectives for the final scope of the solution proposed in this degree project.\\
+It is of high importance to have a general and specific planning of the objectives to be developed in the evolution of the project. The following are the structured objectives for the final scope of the solution proposed in this project to obtain the degree of \say{Mechatronics Engineers}.\\
 
 \subsection{General objective}
 
@@ -1396,6 +1396,8 @@ As mentioned before, the \say{Stop State} is a condition that guarantees that th
 \section{General ROS Architecture}
 
 \section{System ROS Architecture}
+
+\section{Anomaly Conditions Handling}
 
 \section{Orchestrate Nodes with Graphical User Interface}
 
