Add baxter general section and add baxter setup information

--- a/references.bib
+++ b/references.bib
@@ -536,6 +536,41 @@
     note={\url{https://www.burgehugheswalsh.co.uk/uploaded/1/documents/pugh-matrix-v1.1.pdf}}
 }
 
+@misc{cite_baxter_main_wiki, 
+    title={Baxter Research Robot Wiki},
+    author="{Rethink Robotics}",
+    year={2015},
+    note={\url{https://sdk.rethinkrobotics.com/wiki/Home}}
+}
+
+@misc{cite_baxter_arms_calibartion, 
+    title={Robot Arm Calibration},
+    author="{Rethink Robotics}",
+    year={2015},
+    note={\url{https://sdk.rethinkrobotics.com/wiki/Arm_Calibration}}
+}
+
+@misc{cite_baxter_components, 
+    title={Robot Components},
+    author="{Rethink Robotics}",
+    year={2015},
+    note={\url{https://sdk.rethinkrobotics.com/wiki/Robot_Components}}
+}
+
+@misc{cite_baxter_arms_wiki, 
+    title={Arms},
+    author="{Rethink Robotics}",
+    year={2015},
+    note={\url{https://sdk.rethinkrobotics.com/wiki/Arms}}
+}
+
+@misc{cite_baxter_io_wiki, 
+    title={Input and Output},
+    author="{Rethink Robotics}",
+    year={2015},
+    note={\url{https://sdk.rethinkrobotics.com/wiki/Input_and_Output}}
+}
+
 
 
 
