Update BaxterRobot section with Hardware Specifications

--- a/references.bib
+++ b/references.bib
@@ -571,6 +571,27 @@
     note={\url{https://sdk.rethinkrobotics.com/wiki/Input_and_Output}}
 }
 
+@misc{cite_baxter_hardware_specifications, 
+    title={Hardware Specifications},
+    author="{Rethink Robotics}",
+    year={2015},
+    note={\url{https://sdk.rethinkrobotics.com/wiki/Hardware_Specifications}}
+}
+
+@misc{cite_ubuntu_download_1404, 
+    title={Ubuntu 14.04.6 LTS (Trusty Tahr)},
+    author="{Canonical and Ubuntu Community}",
+    year={2014},
+    note={\url{https://releases.ubuntu.com/14.04/}}
+}
+
+@misc{cite_ros_indigo_main_page, 
+    title={ROS Indigo Igloo},
+    author="{ROS organization}",
+    year={2014},
+    note={\url{http://wiki.ros.org/indigo}}
+}
+
 
 
 
