Update Baxter Robot with initial Math approach

--- a/references.bib
+++ b/references.bib
@@ -592,6 +592,20 @@
     note={\url{http://wiki.ros.org/indigo}}
 }
 
+@misc{cite_baxter_humanoid_robot_kinematics_ohio, 
+    title={Baxter Humanoid Robot Kinematics},
+    author={Robert L. Williams},
+    year={2017},
+    note={\url{https://www.ohio.edu/mechanical-faculty/williams/html/PDF/BaxterKinematics.pdf}}
+}
+
+@article{cite_denativ_hartenberg,
+    author = "{J. Denavit  and R. Harterberg}",
+    year = {1955},
+    title = {A kinematic notation for lower-pair mechanisms based on matrices},
+    note = {\url{https://home.konkuk.ac.kr/~cgkang/courses/robotics/courseMaterials/DHpaper.pdf}}
+}
+
 
 
 
